tab bar connected with other view controller

--- a/GoodHabitsApp/Base.lproj/Main.storyboard
+++ b/GoodHabitsApp/Base.lproj/Main.storyboard
@@ -56,10 +56,25 @@
             </objects>
             <point key="canvasLocation" x="1216.8" y="108.39580209895054"/>
         </scene>
-        <!--Help Friend-->
+        <!--Item-->
+        <scene sceneID="Geo-MH-fmF">
+            <objects>
+                <viewController id="D4T-LM-qsV" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Pfe-bR-xzp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="CnV-XM-4gl"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="f66-bZ-7zs"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wQm-0g-YYF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2511" y="-598"/>
+        </scene>
+        <!--Back-->
         <scene sceneID="V6u-Qv-mf1">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6jS-aW-QKE" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="Omk-e6-6aB" customClass="ConnectViewController" customModule="GoodHabitsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CI7-Qw-nf2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -85,11 +100,14 @@
                         <viewLayoutGuide key="safeArea" id="13a-I9-OZw"/>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="featured" id="ob8-d4-8Mx"/>
-                    <navigationItem key="navigationItem" title="Help Friend" id="xEX-Cb-smf"/>
+                    <navigationItem key="navigationItem" title="Back" id="xEX-Cb-smf">
+                        <barButtonItem key="backBarButtonItem" title="back" id="H7z-FT-89z"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="nameLabel" destination="F59-d6-PAG" id="leq-mQ-bHN"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6jS-aW-QKE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2903.1999999999998" y="95.802098950524751"/>
         </scene>
@@ -115,11 +133,13 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="wfZ-3i-FHQ" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="57d-GH-LOC">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="Omk-e6-6aB" kind="relationship" relationship="viewControllers" id="nBW-Gk-nzd"/>
+                        <segue destination="D4T-LM-qsV" kind="relationship" relationship="viewControllers" id="GZs-9h-UhI"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TpO-0T-BEA" userLabel="First Responder" sceneMemberID="firstResponder"/>
