--- a/GoodHabitsApp/Base.lproj/Main.storyboard
+++ b/GoodHabitsApp/Base.lproj/Main.storyboard
@@ -57,6 +57,22 @@
             <point key="canvasLocation" x="1216.8" y="108.39580209895054"/>
         </scene>
         <!--Item-->
+        <scene sceneID="mis-p6-bdy">
+            <objects>
+                <viewController id="UGQ-sc-F80" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xRG-VE-n3P">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="toz-ic-hC2"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="oNG-Rp-Dm0"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y3g-GR-7qy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1718" y="-622"/>
+        </scene>
+        <!--Item-->
         <scene sceneID="Geo-MH-fmF">
             <objects>
                 <viewController id="D4T-LM-qsV" sceneMemberID="viewController">
@@ -70,7 +86,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wQm-0g-YYF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2511" y="-598"/>
+            <point key="canvasLocation" x="2817" y="81"/>
         </scene>
         <!--Back-->
         <scene sceneID="V6u-Qv-mf1">
@@ -81,7 +97,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xVd-cv-sqB">
-                                <rect key="frame" x="126" y="323" width="140" height="89"/>
+                                <rect key="frame" x="117" y="477" width="140" height="89"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Help Friend"/>
                                 <connections>
@@ -95,11 +111,25 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8mB-hl-19u">
+                                <rect key="frame" x="70" y="242" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l4t-xX-LIm">
+                                <rect key="frame" x="70" y="286" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="13a-I9-OZw"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="featured" id="ob8-d4-8Mx"/>
+                    <tabBarItem key="tabBarItem" id="ob8-d4-8Mx"/>
                     <navigationItem key="navigationItem" title="Back" id="xEX-Cb-smf">
                         <barButtonItem key="backBarButtonItem" title="back" id="H7z-FT-89z"/>
                     </navigationItem>
@@ -109,7 +139,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6jS-aW-QKE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2903.1999999999998" y="95.802098950524751"/>
+            <point key="canvasLocation" x="2818" y="-701"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="6Br-3a-Ekm">
@@ -140,11 +170,12 @@
                     <connections>
                         <segue destination="Omk-e6-6aB" kind="relationship" relationship="viewControllers" id="nBW-Gk-nzd"/>
                         <segue destination="D4T-LM-qsV" kind="relationship" relationship="viewControllers" id="GZs-9h-UhI"/>
+                        <segue destination="UGQ-sc-F80" kind="relationship" relationship="viewControllers" id="e91-YT-mxl"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TpO-0T-BEA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1964" y="95.802098950524751"/>
+            <point key="canvasLocation" x="1985" y="157"/>
         </scene>
     </scenes>
 </document>
